--- a/App.css
+++ b/App.css
@@ -1,3 +1,55 @@
-#heading {
-    color:red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.nav-items>ul {
+    display: flex;
+    list-style: none;
+}
+
+ul>li {
+    margin: 20px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.body {
+    border: 1px solid black;
+    margin-top: 5px;
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
+}
+
+.res-container{
+    display: flex;
+}
+
+.res-card {
+    background-color: #f0f0f0;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    height: 250px;
+    transition: 0.3s;
+}
+
+.res-card:hover{
+    transition: 0.5s;
+    border: 1px solid black;
+    
+    /* border-radius: 10%; */
+}
+
+.res-card>img {
+    width: 100%;
+}
+
+.search {
+    margin: 10px;
 }
