--- a/App.css
+++ b/App.css
@@ -44,6 +44,10 @@ ul>li {
     margin: 10px;
 }
 
+/* .search>input{
+    padding: 5px;
+} */
+
 .topRated-btn {
     margin: 10px;
     cursor: pointer;
@@ -54,21 +58,44 @@ ul>li {
     flex-wrap: wrap;
 }
 
+.res-container>a {
+    /* text-decoration: none; */
+    color: inherit; /* blue colors for links too */
+    text-decoration: inherit; /* no underline */
+}
 .res-card {
     background-color: #f0f0f0;
     margin: 10px;
     padding: 10px;
     width: 200px;
-    /* height: 250px; */
+    height: 45vh;
+    height: 48vh;
+    padding-bottom: 15px;
     transition: 0.2s ease-in-out;
 }
 
 .res-card:hover {
-    transition: 0.1s;    
+    transition: 0.1s;
     box-shadow: 5px 5px rgb(218, 203, 203);
     cursor: pointer;
 }
 
 .res-card>img {
     width: 100%;
+}
+
+.res-page-img{
+    margin: 10 0px;
+    width: 200px;
+}
+
+.res-page-items{
+    list-style: none;
+    display: flex;
+    justify-content:space-around;
+    /* flex-wrap: wrap; */
+}
+.res-page-items>li{
+    background-color: #f0f0f0;
+    cursor: pointer;
 }
