--- a/index.css
+++ b/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.shimmer-container {
+    margin-top: 5px;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    /* background-color: #f0f0f0; */
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    height: 250px;
+
+    background: #f6f7f8;
+    background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-repeat: no-repeat;
+    background-size: 200px 200px; 
+    display: inline-block;
+    position: relative; 
+}
